Add initial unit test file

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Flask Hubble project">
     <meta name="author" content="Rogerio Prando">
-    <title>Kennedy Family Recipe App</title>
+    <title>Flask Hubble</title>
     <!-- styles -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
   </head>
@@ -18,7 +18,7 @@
 This site is a template to your web project.
 
 
-<h2>Pyhton</h2>
+<h2>Python</h2>
 
 <h2>Flask</h2>
 
