Added use of templates and Bootstrap

--- a/project/core/templates/index.html
+++ b/project/core/templates/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Flask Hubble project">
-    <meta name="author" content="Rogerio Prando">
-    <title>Flask Hubble</title>
-    <!-- styles -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-  </head>
-  <body>
+{% extends "layout.html" %}
+{% block content %}
 
-<h1>Welcome to the Flask Hubble project!</h1>
+    <div class="page-header">
+        <h1>Home</h1>
+    </div>
 
-
-
-This site is a template to your web project.
-
-
-<h2>Python</h2>
-
-<h2>Flask</h2>
-
-<h2>HTML</h2>
-
-<h2>CSS</h2>
-
-  </body>
-</html>
+{% endblock %}
