--- a/project/core/templates/eventos.html
+++ b/project/core/templates/eventos.html
@@ -5,6 +5,7 @@
         <h2>Eventos</h2>
     </div>
     <div class="row">
+        <a class="btn btn-primary" href="{{ url_for('core.add_event') }}">Adicionar Evento</a>
         <div class="col-md-16">
             <table class="table table-striped" id="owned_stock_table">
                 <thead>
