--- a/project/core/templates/layout.html
+++ b/project/core/templates/layout.html
@@ -43,6 +43,21 @@
         </div><!-- /.container -->
     </nav>
 
+    <div class="col-md-10">
+    <!-- flash messages -->
+    {% for error_message in get_flashed_messages(category_filter=["error"]) %}
+        <div class="alert alert-danger alert-dismissible">{{ error_message }}</div>
+    {% endfor %}
+
+    {% for success_message in get_flashed_messages(category_filter=["success"]) %}
+        <div class="alert alert-success alert-dismissible">{{ success_message }}</div>
+    {% endfor %}
+
+    {% for info_message in get_flashed_messages(category_filter=["info"]) %}
+        <div class="alert alert-info alert-dismissible">{{ info_message }}</div>
+    {% endfor %}
+    </div>
+
     <div class="container">
         <div class="content">
             <!-- child template -->
