--- a/project/templates/register.html
+++ b/project/templates/register.html
@@ -10,7 +10,7 @@
         <form action="{{ url_for('users.register_new_user') }}" method="post">
             {{ form.csrf_token }}
             <dl>
-                {{ render_field(form.name, placeholder="Usuário") }}
+                {{ render_field(form.username, placeholder="Usuário") }}
                 {{ render_field(form.email, placeholder="Endereço e-mail") }}
                 {{ render_field(form.password, placeholder="Senha") }}
                 {{ render_field(form.confirm_password, placeholder="Confirme a senha") }}
