Added password hashing

--- a/project/templates/register.html
+++ b/project/templates/register.html
@@ -11,7 +11,7 @@
             {{ form.csrf_token }}
             <dl>
                 {{ render_field(form.first_name, placeholder="Nome") }}
-                {{ rebder_field(form.last_name, placeholder="Sobrenome") }}
+                {{ render_field(form.last_name, placeholder="Sobrenome") }}
                 {{ render_field(form.email, placeholder="Endereço e-mail") }}
                 {{ render_field(form.password, placeholder="Senha") }}
                 {{ render_field(form.confirm_password, placeholder="Confirme a senha") }}
